--- a/changelog.txt
+++ b/changelog.txt
@@ -45,10 +45,11 @@
 
 [b]Personnalisation graphique :[/b]
 [*] [color=red]Nouveauté:[/color] Possibilité de masquer indépendamment tous les conteneurs suivant les thèmes.
-- [color=red]Nouveauté:[/color] Nouveau thème pour la distribution complete.
 [*] Possibilité de cacher/ouvrir dans la liste des modules, la description et les autorisations de lecture pour une meilleure lisibilité
 [*] Amélioration de l'interface de gestion des thèmes.
 [*] Possibilité de personnaliser son logo par thème et le favicon du site ainsi que les fichiers CSS de chaque thème
+[*] [color=red]Nouveauté:[/color] Nouveau thème Base2 pour la distribution complete.
+[*] Le nom du site est directement intégré dans le header et n'est plus une image
 
 [b]Divers :[/b]
 [*] [color=red]Nouveauté:[/color] Possibilité d'utiliser un serveur smtp pour l'envoi de mails.
