--- a/bugtracker/lang/english/desc.ini
+++ b/bugtracker/lang/english/desc.ini
@@ -1,3 +1,3 @@
 name="Bugtracker"
 desc="This module allows you to follow bugs."
-admin_links=""
+admin_links="Configuration => admin_bugtracker.php, Authorizations => admin_bugtracker_authorizations.php"
