--- a/bugtracker/lang/french/desc.ini
+++ b/bugtracker/lang/french/desc.ini
@@ -1,3 +1,3 @@
 name="Bugtracker"
 desc="Module de gestion des anomalies."
-admin_links=""
+admin_links="Configuration => admin_bugtracker.php, Authorisations => admin_bugtracker_authorizations.php"
