--- a/todo.txt
+++ b/todo.txt
@@ -39,6 +39,14 @@
 #################################################################################
 
 ------------------------------------ MODULES -----------------------------------
+[b]Bugtracker:[/b] (pas encore sûr de tout pour v4.0 finale, peut-être 4.1)
+- Fonction pour l'envoi de MP/Mail
+- Pouvoir suivre un bug par MP/Mail
+- Séparer les pages
+- Passage en MVC
+- Faire en sorte versions, types et catégories, priorities, severities triable dans admin
+- Statut d'avancement sous forme de %
+- Ajout de filtres pour n'afficher par exemple que certaines catégories ?
 
 #################################################################################
 
