--- a/newsletter/lang/english/desc.ini
+++ b/newsletter/lang/english/desc.ini
@@ -1,5 +1,3 @@
 name="Newsletter"
 desc="This module provides you a newsletter system, with 3 sending methods. Report to the documentation for further informations."
-admin_links="Management => admin_newsletter.php, Configuration => admin_newsletter_config.php, Register members => admin_newsletter.php?member_list=1"
-
-;config="a:2:{s:11:"sender_mail";s:0:"";s:15:"newsletter_name";s:0:"";}"
+admin_links="Home => index.php, Archives => index.php?url=/archives, Flux => (Management => index.php?url=/admin/streams/list, Add => index.php?url=/admin/stream/add), Configuration => index.php?url=/admin/config"
