[MAJ] Bugtracker : Retour ? la configuration sans MVC [MAJ] Bugtracker : Changement dans le stockage des couleurs, le # est maintenant dans la config (facilite l'affichage) [FIX] Bugtracker : Correction d'un probl?me dans le titre du PM quand un bug est assign? [MAJ] Bugtracker : le statut passe en "Assign?" dans le cas o? il a ?t? assign? ? quelqu'un mais qu'il n'est pas encore corrig? [MAJ] Bugtracker : Sur la page d'?dition, on a maintenant uniquement le choix de "corrig? : oui non" pour le statut

--- a/bugtracker/lang/english/desc.ini
+++ b/bugtracker/lang/english/desc.ini
@@ -1,3 +1,3 @@
 name="Bugtracker"
 desc="This module allows you to manage anomalies and evolution requests (but also what you want) on your site, with category management and configurable level access. Complete management of each demand history."
-admin_links="Configuration => index.php?url=/admin/config, Authorisations => index.php?url=/admin/authorizations"
+admin_links="Configuration => admin_bugtracker.php, Authorizations => admin_bugtracker_authorizations.php"
