--- a/todo.txt
+++ b/todo.txt
@@ -78,15 +78,6 @@
 - Possibilité d'envoyer des messages privés à tous les membres d'un groupe ou à tous les membres pour l'administrateur.
 - Possibilité de demander l'envoi d'un mail lors de l'envoi d'un mp.
 
-[b]Bugtracker:[/b]
-- Fonction pour l'envoi de MP/Mail
-- Pouvoir suivre un bug par MP/Mail
-- Séparer les pages
-- Passage en MVC
-- Faire en sorte versions, types et catégories, priorities, severities triable dans admin
-- Statut d'avancement sous forme de %
-- Ajout de filtres pour n'afficher par exemple que certaines catégories ?
-
 [b]Forum[/b]
 - [color=red]Nouveauté:[/color] Nouveaux droits globaux aux groupes dans le forum, suppression/édition des messages/sujets appartenant au membre.
 - [color=red]Nouveauté:[/color] Possibilité de créer des messages semi-automatiques pour les modérateurs.
@@ -112,20 +103,33 @@
 [b]Wiki:[/b]
 - [color=red]Nouveauté:[/color] Système d'enregistrement des articles par différences, lignes par lignes pour un encombrement réduit lors des éditions successives.
 
-[b]Calendrier:[/b]
-- [color=red]Nouveauté:[/color] Possibilité d'ajouter des évenements sur plusieurs jours.
-- Possibilité d'afficher les évenements sur une période donnée.
-
-[b]Contact:[/b]
-- Possibilité de choisir à quel groupe d'utilisateurs envoyer le mail.
-- Possibilité de rajouter des champs dans le formulaire d'envoi.
-
-[b]Nouveau module:[/b]
-- [color=red]Nouveauté:[/color] Module mini-calendrier, module mini attenant au module du calendrier.
-
 [b]Nouveau module:[/b]
 - [color=red]Nouveauté:[/color] Module bannière, Bannières aléatoire à afficher sur le site. Possibilité de créer des campagnes d'affichage:
 choix du nombre d'affichage de la bannière, du nombre de clics sur la bannière, etc..
 
 [b]Nouveau module:[/b]
 - [color=red]Nouveauté:[/color] Module tchat, permet de discuter facilement dans une interface prévue à cet effet.
+
+#################################################################################
+##                                   JULIEN                                    ##
+#################################################################################
+
+------------------------------------ MODULES -----------------------------------
+[b]Bugtracker:[/b]
+[*] [color=red]Nouveauté :[/color] Passage du module en MVC
+[*] Gestion de l'envoi de MP affinée
+- Versions, types, catégories, priorités, niveaux triables dans l'administration du module
+- Statut d'avancement sous forme de %
+- Ajout de filtres dans les tableaux
+- Choisir les colonnes à afficher dans les tableaux depuis la configuration
+- Ajout d'une date de parution pour les versions (utilisée dans la roadmap)
+
+[b]Calendrier:[/b]
+[*] [color=red]Nouveauté :[/color] Passage du module en MVC
++ [color=red]Nouveauté:[/color] Module mini-calendrier, module mini attenant au module du calendrier.
+- [color=red]Nouveauté:[/color] Possibilité d'ajouter des évenements sur plusieurs jours.
+- Possibilité d'afficher les évenements sur une période donnée.
+
+[b]Contact:[/b]
+- Possibilité de choisir à quel groupe d'utilisateurs envoyer le mail.
+- Possibilité de rajouter des champs dans le formulaire d'envoi.
