--- a/todo.txt
+++ b/todo.txt
@@ -73,6 +73,8 @@
 - Possibilité de désactiver l'affichage d'un lien dans les menus
 - [color=red]Nouveauté:[/color] Système d'alertes (javascript) utilisateur évolué.
 - Supprimer les autorisations d'accès dans la gestion des modules pour plus de cohérence
+- Travailler sur le support mobile
+- Mettre en avant les technologies HTML 5 et CSS3
 
 [b]Installateur[/b]
 - Ajout d'une option pour supprimer le dossier à la fin de l'installation
