--- a/news2/lang/french/desc.ini
+++ b/news2/lang/french/desc.ini
@@ -1,3 +1,3 @@
 name="News"
 desc="Ce module vous procure un système de news, avec gestion des categories. Gestion complète de la date de parution."
-admin_links="News => (Gestion => admin_news.php, Ajouter => management.php?new=1), Catégories => (Gestion => admin_news_cat.php, Ajouter => admin_news_cat.php?new=1), Configuration => admin_news_config.php"
+admin_links="News => (Gestion => admin_news.php, Ajouter => /add/), Catégories => (Gestion => /admin/categories/, Ajouter => /admin/categories/add/), Configuration => /admin/config/"
