--- a/calendar/lang/french/desc.ini
+++ b/calendar/lang/french/desc.ini
@@ -1,3 +1,3 @@
 name=Calendrier
 desc="Ce module est un calendrier avec ajout d'évenements possible. Les utilisateurs peuvent ajouter des évenements (gestion du niveau d'accès)."
-admin_links=""
+admin_links="Configuration => index.php?url=/admin/config/, Catégories => (Gestion => index.php?url=/admin/categories/, Ajouter => index.php?url=/admin/categories/add/)"
