[MAJ] Module contact : - Possibilit? d'ajouter des champs suppl?mentaires depuis l'admin - Possibilit? de cacher le champ objet, de demander s'il est obligatoire et de choisir sa valeur par d?faut d?faut dans la config - Possibilit? d'afficher une liste pour l'objet et de d?finir ses valeurs dans la config - Possibilit? de choisir le titre du formulaire dans la config - Possibilit? d'afficher une zone d'informations ? c?t? du formulaire (? gauche, au dessus, ? droite ou en dessous) et de la configurer dans l'admin - Nouvelle ic?ne ic?ne

--- a/contact/lang/english/desc.ini
+++ b/contact/lang/english/desc.ini
@@ -1,3 +1,3 @@
 name="Contact"
-desc="This module allows your members to contact you with a simple form"
-admin_links=""
+desc="This module allows your members to contact you with a simple form. The form fields are manageable."
+admin_links="Configuration => index.php?url=/admin/config/, Fields => (Management => index.php?url=/admin/fields/, Add => index.php?url=/admin/fields/add/)"
