--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,11 @@
 #################################################################################
-#                           PHPBoost 4.0 Changelog                              #
+#                           PHPBoost 4.1 Changelog                              #
 #################################################################################
 
 ===================================== Noyau ======================================
 [b]Framework :[/b]
-[*] [FEATURE] Nouveau système de catégories, plus fiable et plus performant avec ajout du drag & drop pour la gestion des catégories
-[*] [FEATURE] Ajout de l'affichage de la taille de la mémoire utilisée par PHP
+[*] [color=red]Nouveauté :[/color] Nouveau système de catégories, plus fiable et plus performant avec ajout du drag & drop pour la gestion des catégories
+[*] [color=red]Nouveauté :[/color] Ajout de l'affichage de la taille de la mémoire utilisée par PHP
 - Revoir la façon dont est stocké les inscrits aux groupes (actuellement c'est stocké dans la table member et groups, faire une table de jointure)
 - Changer de format de stockage des fuseaux horaires
 - Ajout de ReCaptcha
@@ -36,35 +36,57 @@
 =================================== Modules =====================================
 
 [b]News[/b]
-[*] [FEATURE] Passage du module en MVC
-[*] [FEATURE] Ajout du nouveau système de catégorie
-[*] [FEATURE] Possibilité d'ajouter des mots clés
-[*] [FEATURE] Refonte des formulaires (plus intuitifs)
-[*] [FEATURE] Possibilité de couper une news à un certain nombre de caractères
-[*] [FEATURE] Possiblité de désactiver les suggestions de news
-[*] [FEATURE] Suppression de l'affichage en liste devenu inutil
-[*] [FEATURE] Nettoyage de la configuration
-[*] [FEATURE] Refonte graphique
-[*] [FEATURE] Possibilité de personnaliser l'url d'une news
-[*] [FEATURE] Amélioration du référencement
+[*] [color=red]Nouveauté :[/color] Passage du module en MVC
+[*] [color=red]Nouveauté :[/color] Ajout du nouveau système de catégorie
+[*] [color=red]Nouveauté :[/color] Possibilité d'ajouter des mots clés
+[*] [color=red]Nouveauté :[/color] Refonte des formulaires (plus intuitifs)
+[*] [color=red]Nouveauté :[/color] Possibilité de couper une news à un certain nombre de caractères
+[*] [color=red]Nouveauté :[/color] Possiblité de désactiver les suggestions de news
+[*] [color=red]Nouveauté :[/color] Suppression de l'affichage en liste devenu inutil
+[*] [color=red]Nouveauté :[/color] Nettoyage de la configuration
+[*] [color=red]Nouveauté :[/color] Refonte graphique
+[*] [color=red]Nouveauté :[/color] Possibilité de personnaliser l'url d'une news
+[*] [color=red]Nouveauté :[/color] Amélioration du référencement
 - Ajout des microdonnées pour améliorer le référencement
 
 [b]BugTracker[/b]
-[*] [FEATURE] Passage du module en MVC
-[*] [FEATURE] Filtres en haut des tableaux
-[*] [FEATURE] Légende en bas des tableaux avec la couleur des niveaux et leurs noms
-[*] [FEATURE] Possibilité de désactiver l'affichage des statistiques via une nouvelle option dans l'administration
-[*] [FEATURE] Statut d'avancement sous forme de %
-[*] [FEATURE] Graphiques dans les statistiques
-- [FEATURE] Versions, types, catégories, priorités, niveaux triables dans l'administration du module
-[*] [MAJ] L'envoi de MP peut être activé de manière plus affinée
-[*] [MAJ] Changement de mise en forme des tableaux pour plus de lisibilité
+[*] [color=red]Nouveauté :[/color] Passage du module en MVC
+[*] [color=red]Nouveauté :[/color] Filtres en haut des tableaux
+[*] [color=red]Nouveauté :[/color] Légende en bas des tableaux avec la couleur des niveaux et leurs noms
+[*] [color=red]Nouveauté :[/color] Possibilité de désactiver l'affichage des statistiques via une nouvelle option dans l'administration
+[*] [color=red]Nouveauté :[/color] Alertes administrateur en fonction de la criticité du bug lors de l'ajout, possibilité de désactiver l'option dans l'administration
+[*] [color=red]Nouveauté :[/color] Statut d'avancement sous forme de %
+[*] [color=red]Nouveauté :[/color] Graphiques dans les statistiques
+[*] L'ajout et la suppression de niveaux et priorités n'est plus possible pour être cohérent avec les alertes administrateur. Par contre il est toujours possible de changer leur nom et la couleur des niveaux
+[*] L'envoi de MP peut être activé de manière plus affinée
+[*] Changement de mise en forme des tableaux pour plus de lisibilité
+- Ajout d'une date de parution pour les versions (utilisée dans la roadmap)
+
+[b]Contact[/b]
+[*] [color=red]Nouveauté :[/color] Possibilité d'ajouter des champs supplémentaires depuis l'admin
+[*] [color=red]Nouveauté :[/color] Possibilité de cacher le champ objet, de demander s'il est obligatoire et de choisir sa valeur par défaut défaut dans la config
+[*] [color=red]Nouveauté :[/color] Possibilité d'afficher une liste pour l'objet et de définir ses valeurs dans la config
+[*] [color=red]Nouveauté :[/color] Possibilité de configurer le titre du formulaire dans la config
+[*] [color=red]Nouveauté :[/color] Possibilité d'afficher une zone d'informations à côté du formulaire (à gauche, au dessus, à droite ou en dessous) et de la configurer dans l'admin
+[*] [color=red]Nouveauté :[/color] Nouvelle icône
+- Possibilité de choisir à quel groupe d'utilisateurs envoyer le mail.
 
 [b]Livre d'or[/b]
-[*] [FEATURE] Passage du module en MVC
+[*] [color=red]Nouveauté :[/color] Passage du module en MVC
 
 [b]Calendrier[/b]
-[*] [FEATURE] Passage du module en MVC
-[*] [FEATURE] Gestion des évènements sur plusieurs jours
-[*] [FEATURE] Mini-module
+[*] [color=red]Nouveauté :[/color] Passage du module en MVC
+[*] [color=red]Nouveauté :[/color] Ajout du nouveau système de catégorie pour les événements
+[*] [color=red]Nouveauté :[/color] Gestion des événements sur plusieurs jours
++ [color=red]Nouveauté:[/color] Module mini-calendrier, module mini attenant au module du calendrier.
+[*] [color=red]Nouveauté :[/color] Flux RSS
+[*] [color=red]Nouveauté :[/color] Recherche
+[*] [color=red]Nouveauté :[/color] Sitemap
+[*] [color=red]Nouveauté :[/color] Contributions pour l'ajout d'événement
 - Ajout des microdonnées pour améliorer le référencement
++ Possibilité de créer un évènement de manière récursive ( tous les X jours, X semaines, X mois) / pouvoir dupliquer de la même manière un événement déjà présent dans le calendrier
++ Possibilité de s'inscrire à un évènement et de limiter le nombre des inscrits à un événement
+- Système de filtre par mot-clé dans la liste des événements
+- Possibilité d'afficher la liste des événements d'une ou de plusieurs catégories pour un mois donné
+- Possibilité d'afficher la liste des événements d'une ou de plusieurs catégories pour une année donnée
+- Possibilité d'afficher la liste des événements d'une ou de plusieurs catégories pour un écart entre 2 dates
