[FIX] #612 : Faute ortographe dans le module bugtracker

--- a/bugtracker/lang/french/desc.ini
+++ b/bugtracker/lang/french/desc.ini
@@ -1,3 +1,3 @@
 name="Rapport de bug"
 desc="Ce module vous permettra de gérer les anomalies et les demandes d'évolution (voir d'autres choses) sur votre site, avec gestion des catégories et niveau d'accès configurables. Gestion complète de l'historique des demandes."
-admin_links="Configuration => admin_bugtracker.php, Authorisations => admin_bugtracker_authorizations.php"
+admin_links="Configuration => admin_bugtracker.php, Autorisations => admin_bugtracker_authorizations.php"
