--- a/articles/lang/french/desc.ini
+++ b/articles/lang/french/desc.ini
@@ -1,3 +1,3 @@
 name="Articles"
 desc="Ce module vous permettra de rédiger des articles sur plusieurs pages, avec gestion des catégories (et niveau d'accès). Les utilisateurs peuvent proposer des articles (niveau d'autorisation configurable). Gestion complète de la date de parution."
-admin_links="Articles => (Gestion => index.php?url=, Ajouter => index.php?url=/add/), Catégories => (Gestion => index.php?url=, Ajouter => index.php?url=), Configuration => index.php?url=/admin/config/"
+admin_links="Articles => (Ajouter => index.php?url=/add/, Gestion => index.php?url=), Catégories => (Gestion => index.php?url=, Ajouter => index.php?url=), Configuration => index.php?url=/admin/config/"
