--- a/changelog.txt
+++ b/changelog.txt
@@ -31,7 +31,7 @@
 [b]Divers :[/b]
 - Suppression du panneau de modération présent dans l'administration qui fait doublon avec celui du dossier user
 - Envoi d'un MP lors d'un commentaire sur une contribution
-- Ajout de la balise enclosure dans les flux RSS pour joindre des médias
+[*] Ajout de la balise enclosure dans les flux RSS pour joindre des médias
 
 =================================== Modules =====================================
 
