--- a/articles/lang/english/desc.ini
+++ b/articles/lang/english/desc.ini
@@ -1,3 +1,3 @@
 name="Articles"
 desc="This module allows you to write articles on multiple pages, with categories management (and access level). Users can submit articles (configurable auth level). Complete management of publication date."
-admin_links="Articles => (Manage => index.php?url=, Add => index.php?url=/add/), Categories => (Manage => index.php?url=, Add => index.php?url=), Configuration => inde.php?url=/admin/config/"
+admin_links="Articles => (Manage => index.php?url=, Add => index.php?url=/add/), Categories => (Manage => index.php?url=/admin/categories/, Add => index.php?url=/admin/categories/add/), Configuration => index.php?url=/admin/config/"
