--- a/calendar/lang/english/desc.ini
+++ b/calendar/lang/english/desc.ini
@@ -1,3 +1,3 @@
 name="Calendar"
 desc="This module is a fully featured event calendar. Users can post events (configurable auth access)"
-admin_links="Configuration => index.php?url=/admin/config/, Categories => (Management => index.php?url=/admin/categories/, Add => index.php?url=/admin/categories/add/)"
+admin_links="Categories => (Management => index.php?url=/admin/categories/, Add => index.php?url=/admin/categories/add/), Configuration => index.php?url=/admin/config/"
