--- a/news/lang/french/desc.ini
+++ b/news/lang/french/desc.ini
@@ -1,3 +1,3 @@
 name="News"
 desc="Ce module vous procure un système de news, avec gestion des categories. Gestion complète de la date de parution."
-admin_links="News => (Ajouter => index.php?url=/add/), Catégories => (Gestion => index.php?url=/admin/categories/, Ajouter => index.php?url=/admin/categories/add/), Configuration => index.php?url=/admin/config/"
+admin_links="News => (Gestion => index.php?url=/admin/manage/, Ajouter => index.php?url=/add/), Catégories => (Gestion => index.php?url=/admin/categories/, Ajouter => index.php?url=/admin/categories/add/), Configuration => index.php?url=/admin/config/"
