--- a/changelog.txt
+++ b/changelog.txt
@@ -12,16 +12,16 @@
 + Amélioration du référencement :
 	[*] Le nom du site est affiché à la fin dans la balise title (sauf pour la page d'accueil ou il est au début)
 	[*] Modification de la balise description (elle présentera la description de la page ou du site sur la page d'accueil du site)
-	- Ajout des microdonnées : 
-		- Modification du système de notation
-		- Modification du système de commentaire
+	[*] Ajout des microdonnées : 
+		[*] Modification du système de notation
+		[*] Modification du système de commentaire
 [*] Ajout des liens éditer et supprimer dans la liste déroulante de la recherche d'un membre (les boutons sont visible seulement par les administrateurs)
 [*] Ajout d'une classe ModulePagination pour simplifier l'ajout de la pagination dans un module
 
 - Etendre les fonctionnalités de l'ExtensionPoint HomePage pour pouvoir avoir la possibilité d'en avoir plusieurs par module et ainsi afficher par exemple 
 les pages du module "pages".
 - Refonte du module Web ?
-- Modification de la classe Date (modification des constantes permettant de choisir le formatage de la date : plus explicites et plus de choix)
+[*] Modification de la classe Date (modification des constantes permettant de choisir le formatage de la date : plus explicites et plus de choix)
 
 [b]Menus :[/b]
 - Possibilité de désactiver l'affichage d'un lien dans les menus
