[MAJ] Online : ajout de l'avatar + diverses optimisations

--- a/online/lang/french/desc.ini
+++ b/online/lang/french/desc.ini
@@ -1,2 +1,2 @@
 name="En ligne"
-desc="Ce module affiche sur votre site les membres connectés et leur rang, ce nombre peut être limité dans la configuration."
+desc="Ce module affiche la liste des membres connectés sur votre site et leur localisation, ce nombre peut être limité dans la configuration."
