--- a/guestbook/lang/english/desc.ini
+++ b/guestbook/lang/english/desc.ini
@@ -1,2 +1,2 @@
 name="Guestbook"
-desc="This module provides you a guestbook system."
+desc="This module allows visitors and members to give their opinion about the website."
