--- a/guestbook/lang/french/desc.ini
+++ b/guestbook/lang/french/desc.ini
@@ -1,3 +1,2 @@
 name="Livre d'or"
-desc="Ce module vous procure un système de livre d'or."
-
+desc="Ce module permet aux visiteurs et aux membres de donner leur avis sur le site."
