--- a/changelog.txt
+++ b/changelog.txt
@@ -30,7 +30,8 @@
 - Etendre les fonctionnalités de l'ExtensionPoint HomePage pour pouvoir avoir la possibilité d'en avoir plusieurs par module et ainsi afficher par exemple 
 les pages du module "pages".
 - Refonte du module Web ?
-- Refonte du système d'événement et intégration d'un système de notification	
+- Refonte du système d'événement et intégration d'un système de notification
+[*] Configuration des utilisateurs : possibilité d'envoyer un MP à l'anniversaire des membres et de personnaliser le titre et le texte du message
 
 [b]Menus :[/b]
 - Possibilité de désactiver l'affichage d'un lien dans les menus
